Fix spacing of globe

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -55,7 +55,7 @@ ul li {
 }
 
 #google_translate_element {
-  padding-right: 40px;
+  padding-right: 48px;
   display: block;
   position: relative;
   top: -3px;
